# DesktopNova

./: CMakeLists.txt  ChangeLog  README
res/: desktopnova-tray.desktop  desktopnova.desktop
src/: CMakeLists.txt  config.in  fwd.hpp
src/common/: CMakeLists.txt  buildconfig.hpp.in  common.c  common.h  configfile.hpp  configuration.cpp  configuration.hpp  helpers.c  helpers.h  path.cpp  path.hpp  profile.cpp  profile.hpp  profiles.c  profiles.h  settings.c  settings.h
src/daemon/: CMakeLists.txt  activehelper.hpp  activeprofile.hpp  daemon.c  daemon.cpp  daemon.h  daemon.hpp  main.cpp  wallpaper.hpp
src/gui/: CMakeLists.txt  main.c  main.h
src/helpers/: CMakeLists.txt  Makefile  README  gnome-shell.c  gnome-shell.helper  gnome2.c  gnome2.helper  xfce-xfconf.c  xfce-xfconf.helper
